fix: price on mobile

--- a/src/components/common/TableGrid.module.css
+++ b/src/components/common/TableGrid.module.css
@@ -1,208 +1,215 @@
 @import url(../../styles/variables.css);
 
 .main {
- width: 100%;
- height: 100%;
- position: relative;
- margin-left: 50px;
- display: flex;
- align-items: center;
- justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin-left: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .image_wrapper {
- width: 70px;
- padding: 4px;
+  width: 70px;
+  padding: 4px;
 }
 
 .image_wrapper img {
- width: 100%;
- height: 60%;
- object-fit: contain;
+  width: 100%;
+  height: 60%;
+  object-fit: contain;
 }
 
 .image_wrapper p {
- font-size: 10px;
- font-weight: 900;
- margin-top: 5px;
- margin-bottom: -10px;
- white-space: nowrap;
+  font-size: 10px;
+  font-weight: 900;
+  margin-top: 5px;
+  margin-bottom: -10px;
+  white-space: nowrap;
 }
 
 .title {
- font-size: 0.5rem !important;
+  font-size: 0.5rem !important;
 }
 
 .size_wrapper {
- width: 100%;
- display: flex;
+  width: 100%;
+  display: flex;
 }
 
 .table {
- border-collapse: collapse;
- table-layout: auto;
- margin-bottom: 5px;
+  border-collapse: collapse;
+  table-layout: auto;
+  margin-bottom: 5px;
 }
 
 .td,
 button {
- transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .table .td {
- border: 1px solid #000000;
+  border: 1px solid #000000;
 }
 
 .tr:nth-of-type(even) {
- background-color: var(--color-grey-2-shadow) !important;
+  background-color: var(--color-grey-2-shadow) !important;
 }
 
 .table .td,
 .tr {
- font-size: 0.5rem !important;
- text-align: center;
+  font-size: 0.5rem !important;
+  text-align: center;
 }
 
 .td button,
 .td .label {
- font-size: 0.5rem !important;
- border: 1px solid transparent;
- outline: none;
- width: 100%;
- height: 100%;
- background-color: inherit;
- padding: 5px 10px;
- white-space: nowrap;
+  font-size: 0.5rem !important;
+  border: 1px solid transparent;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  padding: 5px 10px;
+  white-space: nowrap;
 }
 
 .table .th {
- font-size: 0.4rem;
- height: 3rem;
+  font-size: 0.4rem;
+  height: 3rem;
 }
 
 .available {
- opacity: 1;
+  opacity: 1;
 }
 
 .label:hover {
- cursor: pointer;
- background-color: var(--color-grey-1);
- white-space: nowrap;
+  cursor: pointer;
+  background-color: var(--color-grey-1);
+  white-space: nowrap;
 }
 
 .outOfStock {
- opacity: 0.5;
- white-space: nowrap;
+  opacity: 0.5;
+  white-space: nowrap;
 }
 
 .table .th,
 .table .td {
- width: auto;
- min-width: 80px !important;
+  width: auto;
+  min-width: 80px !important;
 }
 
 .table .td input {
- display: none;
+  display: none;
 }
 
 input:checked ~ .label {
- border: 1px solid rgb(220, 8, 8);
+  border: 1px solid rgb(220, 8, 8);
 }
 
 .td span {
- display: flex;
- align-items: center;
- justify-content: center;
- cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .backdrop {
- width: 100%;
- height: 100%;
- background-color: rgba(0, 0, 0, 0.06);
- backdrop-filter: blur(5px);
- position: absolute !important;
- top: 0;
- left: 0;
- right: 0;
- display: flex;
- align-items: center;
- justify-content: center;
- color: white;
- cursor: not-allowed;
- z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.06);
+  backdrop-filter: blur(5px);
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  cursor: not-allowed;
+  z-index: 10;
 }
 
 .tbody {
- width: 100%;
- height: 100%;
- position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .outOfStock {
- color: red;
+  color: red;
 }
 
 .size_data {
- font-weight: 900 !important;
+  font-weight: 900 !important;
 }
 
 @media only screen and (max-width: 480px) {
- .main {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
- }
+  .main {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
 
- .table .th,
- .table .td {
-  min-width: 0px !important;
- }
+  .table .th,
+  .table .td {
+    min-width: 0px !important;
+  }
 
- .image_wrapper p {
-  font-size: 8px;
-  font-weight: 900;
-  margin-top: 5px;
-  margin-bottom: -15px;
- }
- .td button,
- .td .label {
-  padding: 5px 5px;
- }
+  .image_wrapper p {
+    font-size: 8px;
+    font-weight: 900;
+    margin-top: 5px;
+    margin-bottom: -15px;
+  }
+  .td button,
+  .td .label {
+    padding: 5px 5px;
+  }
 
- .image_wrapper p {
-  margin-bottom: -10px;
- }
+  .image_wrapper p {
+    margin-bottom: -10px;
+  }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 768px) {
- .main {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
- }
+  .main {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
 
- .table .th,
- .table .td {
-  min-width: 0px !important;
- }
+  .table .th,
+  .table .td {
+    min-width: 0px !important;
+  }
 
- .image_wrapper p {
-  font-size: 8px;
-  font-weight: 900;
-  margin-top: 5px;
-  margin-bottom: -15px;
- }
+  .image_wrapper p {
+    font-size: 8px;
+    font-weight: 900;
+    margin-top: 5px;
+    margin-bottom: -15px;
+  }
 
- .td button,
- .td .label {
-  padding: 5px 5px;
- }
- .image_wrapper p {
-  margin-bottom: -10px;
- }
+  .td button,
+  .td .label {
+    padding: 5px 5px;
+  }
+
+  .image_wrapper p {
+    margin-bottom: -10px;
+  }
+
+  .image_wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
