--- a/src/components/filters_page/ResultMobile.module.css
+++ b/src/components/filters_page/ResultMobile.module.css
@@ -14,6 +14,7 @@
   background-color: var(--color-grey-2);
   padding: 10px;
   border-radius: 5px;
+  gap: 10px;
 }
 .right_side {
   width: 30%;
@@ -50,9 +51,20 @@
   margin: 1rem 0;
   width: 100%;
 }
-.detail_text {
+
+.details_table {
+  padding: 1rem 0;
+}
+
+.details_table tr {
+  margin: 5px;
+}
+
+.details_table td {
   font-size: 0.65rem;
-  margin: 3px 0;
+  line-height: 1rem;
+  padding: 2px 3px;
+  vertical-align: top;
 }
 .shop_btn {
   width: 100%;
